--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,7 +1,8 @@
 .list{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .item{
@@ -14,3 +15,9 @@ img{
 width: 200px;
 height: 300px;
 }
+
+div{
+    padding: 10px 20px;
+}
+
+.description{width: 400px;}
