--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,6 +1,6 @@
 .list{
     display: flex;
-    flex-direction: column;
+ flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -8,7 +8,10 @@
 .item{
     margin-right: 10px;
     margin-bottom: 10px;
-    
+    display: flex;
+    flex-direction: column;
+   
+    align-items: center;
 }
 
 img{
@@ -20,4 +23,4 @@ div{
     padding: 10px 20px;
 }
 
-.description{width: 400px;}
+.description, .title{width: 320px;text-align: center;}
